# DEAR

./: CMakeLists.txt  LICENSE  README.md
lib/rg-etc1/: CMakeLists.txt
resources/forms/: main_form.txt
src/: dict_data_manager.cpp  dict_data_manager.hpp  main.cpp  texture_manager.cpp  texture_manager.hpp
src/dict_data_utility/: dict_data_extractor.cpp  dict_data_extractor.hpp  dict_data_manager.cpp  dict_data_manager.hpp  dict_data_repacker.cpp  dict_data_repacker.hpp
src/extracted_files/: extracted_file.cpp  extracted_file.hpp  file_constants.hpp  file_table.cpp  file_table.hpp  mixed_data_file.cpp  mixed_data_file.hpp  texture_metadata_file.cpp  texture_metadata_file.hpp
src/file_formats/: bitmap.cpp  bitmap.hpp  data.cpp  dict.cpp  dict.hpp  texture.cpp  texture.hpp
src/gui/: gui.cpp  gui.hpp
src/gui/components/: file_selector.cpp  file_selector.hpp
src/utils/: ETC1Converter.cpp  ETC1Converter.hpp
